# PhoPS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml  gaia_builder.py  main.py  phops.py  photutil_photometry.py  pyproject.toml  test.py
.github/workflows/: ci.yml
core/: __init__.py  astrometry.py  photometry.py  target.py  utils.py
docs/: architecture.md  configuration.md  outputs.md
f2n/: f2n.py
src/phops/: __init__.py  __main__.py  astrometry.py  cli.py  config.py  errors.py  gui.py  photometry.py  pipeline.py  plotting.py  reporting.py  target.py  utils.py
src/phops/templates/: example_config.yaml
tests/: test_cli.py  test_config.py  test_pipeline.py  test_plotting.py  test_reporting.py  test_utils.py
